unpackaged/main/default/objects/Account/fields/Account_Has_Photo__c.field-meta.xml
<CustomField>
    <fullName>Account_Has_Photo__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Checkbox that is checked in Flow whenever the Account Photo field is populated on an Account.  Then we can use this checkbox for component visibility.</description>
    <label>Account Has Photo?</label>
    <type>Checkbox</type>
</CustomField>