unpackaged/main/default/objects/Account/fields/Account_Photo__c.field-meta.xml
<CustomField>
    <fullName>Account_Photo__c</fullName>
    <description>Field to store a photo of the account.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Account Photo</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>