unpackaged/main/default/objects/Account/fields/BFH_Service_Area__c.field-meta.xml
<CustomField>
    <fullName>BFH_Service_Area__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>BFH Service Area</label>
    <length>80</length>
    <type>Text</type>
</CustomField>