unpackaged/main/default/objects/Account/fields/Body_Mass_Index__c.field-meta.xml
<CustomField>
    <fullName>Body_Mass_Index__c</fullName>
    <inlineHelpText>BMI of patient at last face to face visit</inlineHelpText>
    <label>Body Mass Index</label>
    <precision>3</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>