unpackaged/main/default/objects/Account/fields/Bounces_in_the_Last_12_months__c.field-meta.xml
<CustomField>
    <fullName>Bounces_in_the_Last_12_months__c</fullName>
    <description>Bounces over the last 12 months</description>
    <label>Bounces in the Last 12 months</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>