unpackaged/main/default/objects/Account/fields/Bounces_in_the_Last_6_Months__c.field-meta.xml
<CustomField>
    <fullName>Bounces_in_the_Last_6_Months__c</fullName>
    <description>Bounces over the last 6 months</description>
    <label>Bounces in the Last 6 Months</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>