unpackaged/main/default/objects/Account/fields/Bounces_in_the_Last_7_Days__c.field-meta.xml
<CustomField>
    <fullName>Bounces_in_the_Last_7_Days__c</fullName>
    <description>Bounces over the last 7 days</description>
    <label>Bounces in the Last 7 Days</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>