unpackaged/main/default/objects/Account/fields/Breast_Cancer_Dx__c.field-meta.xml
<CustomField>
    <fullName>Breast_Cancer_Dx__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Checkbox set to yes (checked) if specified diagnoses are in the patient&#39;s diagnosis list</description>
    <inlineHelpText>Automatically set to yes (checked) if specified diagnoses are in the patient&#39;s diagnosis list</inlineHelpText>
    <label>Breast Cancer Dx</label>
    <type>Checkbox</type>
</CustomField>