unpackaged/main/default/objects/Account/fields/Cancer_Patient__c.field-meta.xml
<CustomField>
    <fullName>Cancer_Patient__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Cancer Patient</label>
    <type>Checkbox</type>
</CustomField>