unpackaged/main/default/objects/Account/fields/CCMC_Service_Area__c.field-meta.xml
<CustomField>
    <fullName>CCMC_Service_Area__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>CCMC Service Area</label>
    <length>80</length>
    <type>Text</type>
</CustomField>