unpackaged/main/default/objects/Account/fields/Clicks_in_the_Last_12_Months__c.field-meta.xml
<CustomField>
    <fullName>Clicks_in_the_Last_12_Months__c</fullName>
    <description>Clicks over the last 12 months</description>
    <label>Clicks in the Last 12 Months</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>