unpackaged/main/default/objects/Account/fields/Clicks_in_the_Last_31_Days__c.field-meta.xml
<CustomField>
    <fullName>Clicks_in_the_Last_31_Days__c</fullName>
    <description>Clicks over the last 31 days</description>
    <label>Clicks in the Last 31 Days</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>