unpackaged/main/default/objects/Account/fields/Content_Preferences__c.field-meta.xml
<CustomField>
    <fullName>Content_Preferences__c</fullName>
    <label>Content Preferences</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Newsletters</fullName>
            </value>
            <value>
                <fullName>Announcements</fullName>
            </value>
            <value>
                <fullName>Facility Openings</fullName>
            </value>
            <value>
                <fullName>Healthy Eating</fullName>
            </value>
            <value>
                <fullName>Outdoor Activities</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>