unpackaged/main/default/objects/Account/fields/Cost_Center__c.field-meta.xml
<CustomField>
    <fullName>Cost_Center__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Cost Center</label>
    <length>80</length>
    <type>Text</type>
</CustomField>