unpackaged/main/default/objects/Account/fields/Credentials__c.field-meta.xml
<CustomField>
    <fullName>Credentials__c</fullName>
    <description>Medical credentials/degrees</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Medical credentials/degrees</inlineHelpText>
    <label>Credentials</label>
    <length>255</length>
    <type>Text</type>
</CustomField>