unpackaged/main/default/objects/Account/fields/Date_of_Hire__c.field-meta.xml
<CustomField>
    <fullName>Date_of_Hire__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Date of Hire</label>
    <type>Date</type>
</CustomField>