unpackaged/main/default/objects/Account/fields/Deceased__c.field-meta.xml
<CustomField>
    <fullName>Deceased__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Patient or prospect deceased? If checked, then yes.</description>
    <inlineHelpText>Patient or prospect deceased? If checked, then yes.</inlineHelpText>
    <label>Deceased</label>
    <type>Checkbox</type>
</CustomField>