unpackaged/main/default/objects/Account/fields/Department_ID__c.field-meta.xml
<CustomField>
    <fullName>Department_ID__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <externalId>true</externalId>
    <label>Department ID</label>
    <length>55</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>