unpackaged/main/default/objects/Account/fields/Department_ID_EMR__c.field-meta.xml
<CustomField>
    <fullName>Department_ID_EMR__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <externalId>true</externalId>
    <label>Department ID (EMR)</label>
    <length>9</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>