unpackaged/main/default/objects/Account/fields/Department_Name__c.field-meta.xml
<CustomField>
    <fullName>Department_Name__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Department Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>