unpackaged/main/default/objects/Account/fields/Department_Type__c.field-meta.xml
<CustomField>
    <fullName>Department_Type__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Department Type</label>
    <length>80</length>
    <type>Text</type>
</CustomField>