unpackaged/main/default/objects/Account/fields/Diastolic_Blood_Pressure__c.field-meta.xml
<CustomField>
    <fullName>Diastolic_Blood_Pressure__c</fullName>
    <inlineHelpText>Diastolic blood pressure as taken in last face-to-face visit</inlineHelpText>
    <label>Diastolic Blood Pressure</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>