unpackaged/main/default/objects/Account/fields/EHP_Scheduled_Date__c.field-meta.xml
<CustomField>
    <fullName>EHP_Scheduled_Date__c</fullName>
    <description>Date on which the next &quot;Executive Health&quot; visit is scheduled, as determined by the most recently updated Visit attached to this Account.</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Date on which the next &quot;Executive Health&quot; visit is scheduled, as determined by the most recently updated Visit attached to this Account.</inlineHelpText>
    <label>EHP Scheduled Date</label>
    <type>Date</type>
</CustomField>