unpackaged/main/default/objects/Account/fields/Employee_ID_Epic__c.field-meta.xml
<CustomField>
    <fullName>Employee_ID_Epic__c</fullName>
    <description>This is the employee ID sent from Epic if the patient is an employee and the employee ID is stored</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Employee ID Epic</label>
    <length>54</length>
    <type>Text</type>
</CustomField>