unpackaged/main/default/objects/Account/fields/Employee_ID_Lawson__c.field-meta.xml
<CustomField>
    <fullName>Employee_ID_Lawson__c</fullName>
    <description>This is the employee ID sent from Lawson and used as the external ID for record updates</description>
    <encryptionScheme>None</encryptionScheme>
    <externalId>true</externalId>
    <label>Employee ID Lawson</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>