unpackaged/main/default/objects/Account/fields/Employer__c.field-meta.xml
<CustomField>
    <fullName>Employer__c</fullName>
    <description>EPT 5100 (Employer)</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Employer</label>
    <length>80</length>
    <type>Text</type>
</CustomField>