unpackaged/main/default/objects/Account/fields/Employment_Status__c.field-meta.xml
<CustomField>
    <fullName>Employment_Status__c</fullName>
    <description>Indicates whether or not the person is actively employed</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Indicates whether or not the person is actively employed</inlineHelpText>
    <label>Employment Status</label>
    <length>80</length>
    <type>Text</type>
</CustomField>