unpackaged/main/default/objects/Account/fields/Epic_Department_Name__c.field-meta.xml
<CustomField>
    <fullName>Epic_Department_Name__c</fullName>
    <description>Using Epic naming convention</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Using Epic naming convention</inlineHelpText>
    <label>Epic Department Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>