unpackaged/main/default/objects/Account/fields/Ethnicity__c.field-meta.xml
<CustomField>
    <fullName>Ethnicity__c</fullName>
    <label>Ethnicity</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Non-Hispanic</fullName>
            </value>
            <value>
                <fullName>Unknown</fullName>
            </value>
            <value>
                <fullName>Patient Refused</fullName>
            </value>
            <value>
                <fullName>*Unspecified</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>