unpackaged/main/default/objects/Account/fields/Executive_Health__c.field-meta.xml
<CustomField>
    <fullName>Executive_Health__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Executive Health</label>
    <type>Checkbox</type>
</CustomField>