unpackaged/main/default/objects/Account/fields/Facility__c.field-meta.xml
<CustomField>
    <fullName>Facility__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Facility</label>
    <length>80</length>
    <type>Text</type>
</CustomField>