unpackaged/main/default/objects/Account/fields/Flu_Shots__c.field-meta.xml
<CustomField>
    <fullName>Flu_Shots__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Flu Shots</label>
    <type>Checkbox</type>
</CustomField>