unpackaged/main/default/objects/Account/fields/FTE__c.field-meta.xml
<CustomField>
    <fullName>FTE__c</fullName>
    <description>Full Time Equivalent</description>
    <encryptionScheme>None</encryptionScheme>
    <label>FTE</label>
    <length>100</length>
    <type>Text</type>
</CustomField>