unpackaged/main/default/objects/Account/fields/Grade__c.field-meta.xml
<CustomField>
    <fullName>Grade__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Grade</label>
    <length>80</length>
    <type>Text</type>
</CustomField>