unpackaged/main/default/objects/Account/fields/GRH_Service_Area__c.field-meta.xml
<CustomField>
    <fullName>GRH_Service_Area__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>GRH Service Area</label>
    <length>80</length>
    <type>Text</type>
</CustomField>