unpackaged/main/default/objects/Account/fields/Household_Account__c.field-meta.xml
<CustomField>
    <fullName>Household_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup to the Household account</description>
    <inlineHelpText>Household this prospect or patient is a member of.</inlineHelpText>
    <label>Household Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Accounts (Household Account)</relationshipLabel>
    <relationshipName>HouseholdMembers</relationshipName>
    <type>Lookup</type>
</CustomField>