unpackaged/main/default/objects/Account/fields/HR_Categorization__c.field-meta.xml
<CustomField>
    <fullName>HR_Categorization__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>HR Categorization</label>
    <length>80</length>
    <type>Text</type>
</CustomField>