unpackaged/main/default/objects/Account/fields/HR_Contact_Backup__c.field-meta.xml
<CustomField>
    <fullName>HR_Contact_Backup__c</fullName>
    <description>Backup contact person if the primary HR Contact for this account is unavailable.</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Backup contact person if the primary HR Contact for this account is unavailable.</inlineHelpText>
    <label>HR Contact Backup</label>
    <length>255</length>
    <type>Text</type>
</CustomField>