unpackaged/main/default/objects/Account/fields/HR_Contact_Email__c.field-meta.xml
<CustomField>
    <fullName>HR_Contact_Email__c</fullName>
    <description>Email address for the HR Contact person for this account.</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Email address for the HR Contact person for this account.</inlineHelpText>
    <label>HR Contact Email</label>
    <type>Email</type>
</CustomField>