unpackaged/main/default/objects/Account/fields/HR_Contact_Name__c.field-meta.xml
<CustomField>
    <fullName>HR_Contact_Name__c</fullName>
    <description>Name of the HR Contact person for this account.</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Name of the HR Contact person for this account.</inlineHelpText>
    <label>HR Contact Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>