unpackaged/main/default/objects/Account/fields/HR_Contact_Phone__c.field-meta.xml
<CustomField>
    <fullName>HR_Contact_Phone__c</fullName>
    <description>Phone number for the HR Contact for this Account</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Phone number for the HR Contact for this Account</inlineHelpText>
    <label>HR Contact Phone</label>
    <type>Phone</type>
</CustomField>