unpackaged/main/default/objects/Account/fields/HRH_Service_Area__c.field-meta.xml
<CustomField>
    <fullName>HRH_Service_Area__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>HRH Service Area</label>
    <length>80</length>
    <type>Text</type>
</CustomField>