unpackaged/main/default/objects/Account/fields/Initial_Point_of_Entry__c.field-meta.xml
<CustomField>
    <fullName>Initial_Point_of_Entry__c</fullName>
    <label>Initial Point of Entry</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Emergency Department</fullName>
            </value>
            <value>
                <fullName>Urgent Care</fullName>
            </value>
            <value>
                <fullName>Scheduled PCP Visit</fullName>
            </value>
            <value>
                <fullName>Walk-In Visit</fullName>
            </value>
            <value>
                <fullName>Virtual Visit</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>