unpackaged/main/default/objects/Account/fields/Insurance_Group__c.field-meta.xml
<CustomField>
    <fullName>Insurance_Group__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Group #</label>
    <length>18</length>
    <type>Text</type>
</CustomField>