unpackaged/main/default/objects/Account/fields/Insurance_Plan_Status__c.field-meta.xml
<CustomField>
    <fullName>Insurance_Plan_Status__c</fullName>
    <label>Insurance Plan Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Active</fullName>
            </value>
            <value>
                <fullName>Inactive</fullName>
            </value>
            <value>
                <fullName>Expired</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>