unpackaged/main/default/objects/Account/fields/Insurance_Policy__c.field-meta.xml
<CustomField>
    <fullName>Insurance_Policy__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Policy #</label>
    <length>18</length>
    <type>Text</type>
</CustomField>