unpackaged/main/default/objects/Account/fields/Job_Category__c.field-meta.xml
<CustomField>
    <fullName>Job_Category__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Job Category</label>
    <length>80</length>
    <type>Text</type>
</CustomField>