unpackaged/main/default/objects/Account/fields/Job_Code__c.field-meta.xml
<CustomField>
    <fullName>Job_Code__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Job Code</label>
    <length>100</length>
    <type>Text</type>
</CustomField>