unpackaged/main/default/objects/Account/fields/Job_Description__c.field-meta.xml
<CustomField>
    <fullName>Job_Description__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Job Description</label>
    <length>100</length>
    <type>Text</type>
</CustomField>