unpackaged/main/default/objects/Account/fields/Job_Family__c.field-meta.xml
<CustomField>
    <fullName>Job_Family__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Job Family</label>
    <length>80</length>
    <type>Text</type>
</CustomField>