unpackaged/main/default/objects/Account/fields/Job_Level__c.field-meta.xml
<CustomField>
    <fullName>Job_Level__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Job Level</label>
    <length>80</length>
    <type>Text</type>
</CustomField>