unpackaged/main/default/objects/Account/fields/Job_Subcategory__c.field-meta.xml
<CustomField>
    <fullName>Job_Subcategory__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Job Subcategory</label>
    <length>80</length>
    <type>Text</type>
</CustomField>