unpackaged/main/default/objects/Account/fields/Landing_Page__c.field-meta.xml
<CustomField>
    <fullName>Landing_Page__c</fullName>
    <description>Clinic form landing page URL</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Landing Page</label>
    <type>Url</type>
</CustomField>