unpackaged/main/default/objects/Account/fields/Last_Annual_Gyn_Screen_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Annual_Gyn_Screen_Date__c</fullName>
    <description>Date of last annual gyn screening per Epic CPT codes</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Date of last annual gyn screening per Epic CPT codes</inlineHelpText>
    <label>Last Annual Gyn Screen Date</label>
    <type>Date</type>
</CustomField>