unpackaged/main/default/objects/Account/fields/Last_Annual_Primary_Care_Visit_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Annual_Primary_Care_Visit_Date__c</fullName>
    <description>Date of last annual primary care visit per Epic CPT codes</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Date of last annual primary care visit per Epic CPT codes</inlineHelpText>
    <label>Last Annual Primary Care Visit Date</label>
    <type>Date</type>
</CustomField>