unpackaged/main/default/objects/Account/fields/Last_Bounce_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Bounce_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Last Bounce Date</label>
    <type>DateTime</type>
</CustomField>