unpackaged/main/default/objects/Account/fields/Last_C_Section_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_C_Section_Date__c</fullName>
    <description>Date of last c-section per Epic CPT codes</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Date of last c-section per Epic CPT codes</inlineHelpText>
    <label>Last C-Section Date</label>
    <type>Date</type>
</CustomField>