unpackaged/main/default/objects/Account/fields/Last_Click_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Click_Date__c</fullName>
    <description>Last date a communication was clicked upon (populated by Marketing App)</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Last Click Date</label>
    <type>DateTime</type>
</CustomField>