unpackaged/main/default/objects/Account/fields/Last_Cosmetic_Service_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Cosmetic_Service_Date__c</fullName>
    <description>Date of last cosmetic service per Epic CPT codes</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Date of last cosmetic service per Epic CPT codes</inlineHelpText>
    <label>Last Cosmetic Service Date</label>
    <type>Date</type>
</CustomField>