unpackaged/main/default/objects/Account/fields/Last_Dermatology_Visit_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Dermatology_Visit_Date__c</fullName>
    <description>Date of last dermatology visit per Epic encounters</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Date of last dermatology visit per Epic encounters</inlineHelpText>
    <label>Last Dermatology Visit Date</label>
    <type>Date</type>
</CustomField>