unpackaged/main/default/objects/Account/fields/Last_Flu_Shot_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Flu_Shot_Date__c</fullName>
    <description>Date of last flu shot per Epic CPT codes</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Date of last flu shot per Epic CPT codes</inlineHelpText>
    <label>Last Flu Shot Date</label>
    <type>Date</type>
</CustomField>