unpackaged/main/default/objects/Account/fields/Last_Form_Submitted_Campaign_ID__c.field-meta.xml
<CustomField>
    <fullName>Last_Form_Submitted_Campaign_ID__c</fullName>
    <description>used in web lead generation to relate to campaign id</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>used in web lead generation to relate to campaign id</inlineHelpText>
    <label>Last Form Submitted Campaign ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>