unpackaged/main/default/objects/Account/fields/Last_Live_Birth_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Live_Birth_Date__c</fullName>
    <description>Date of last live birth per Epic CPT codes</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Date of last live birth per Epic CPT codes</inlineHelpText>
    <label>Last Live Birth Date</label>
    <type>Date</type>
</CustomField>