unpackaged/main/default/objects/Account/fields/Last_Mammography_Screen_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Mammography_Screen_Date__c</fullName>
    <description>Date of last mammography screening per Epic CPT codes</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Date of last mammography screening per Epic CPT codes</inlineHelpText>
    <label>Last Mammography Screen Date</label>
    <type>Date</type>
</CustomField>