unpackaged/main/default/objects/Account/fields/Last_Open_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Open_Date__c</fullName>
    <description>Last communication open date (populated by Marketing App)</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Last Open Date</label>
    <type>DateTime</type>
</CustomField>