unpackaged/main/default/objects/Account/fields/Last_Ortho_Injection_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Ortho_Injection_Date__c</fullName>
    <description>Date of last ortho injection per Epic CPT codes</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Date of last ortho injection per Epic CPT codes</inlineHelpText>
    <label>Last Ortho Injection Date</label>
    <type>Date</type>
</CustomField>