unpackaged/main/default/objects/Account/fields/Last_PCP_Visit__c.field-meta.xml
<CustomField>
    <fullName>Last_PCP_Visit__c</fullName>
    <description>Date of last PCP visit</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Last PCP Visit</label>
    <type>Date</type>
</CustomField>