unpackaged/main/default/objects/Account/fields/Last_Plastics_Visit_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Plastics_Visit_Date__c</fullName>
    <description>Date of last plastics visit per Epic encounters</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Date of last plastics visit per Epic encounters</inlineHelpText>
    <label>Last Plastics Visit Date</label>
    <type>Date</type>
</CustomField>