unpackaged/main/default/objects/Account/fields/Last_Primary_Care_Visit_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Primary_Care_Visit_Date__c</fullName>
    <description>Date of last PCP visit per Epic encounters</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Date of last PCP visit per Epic encounters</inlineHelpText>
    <label>Last Primary Care Visit Date</label>
    <type>Date</type>
</CustomField>