unpackaged/main/default/objects/Account/fields/Last_PT_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_PT_Date__c</fullName>
    <description>Date of last PT visit per Epic CPT codes</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Date of last PT visit per Epic CPT codes</inlineHelpText>
    <label>Last PT Date</label>
    <type>Date</type>
</CustomField>