unpackaged/main/default/objects/Account/fields/Last_Send_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Send_Date__c</fullName>
    <description>Last communication send date (populated by Marketing app)</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Last Send Date</label>
    <type>DateTime</type>
</CustomField>