unpackaged/main/default/objects/Account/fields/Last_Unsubscribe_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Unsubscribe_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Last Unsubscribe Date</label>
    <type>DateTime</type>
</CustomField>