unpackaged/main/default/objects/Account/fields/Level_1_Supervisor_s_ID__c.field-meta.xml
<CustomField>
    <fullName>Level_1_Supervisor_s_ID__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Level 1 Supervisor&#39;s ID</label>
    <length>80</length>
    <type>Text</type>
</CustomField>