unpackaged/main/default/objects/Account/fields/Level_1_Supervisor_s_Name__c.field-meta.xml
<CustomField>
    <fullName>Level_1_Supervisor_s_Name__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Level 1 Supervisor&#39;s Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>